--- a/dev-portfolio/src/components/Portfolio/Portfolio.css
+++ b/dev-portfolio/src/components/Portfolio/Portfolio.css
@@ -6,7 +6,7 @@ div {
 #containerp{
   position: relative;
   top: 11vh;
-  height: 365vh;
+  height: 1388px;
   width: fit-content;
   padding-bottom: .5rem;
   padding-top: .5rem;
